@@ -524,7 +524,9 @@ def get_default_entities() -> dict[int, set[str]]:
 
 def get_additional_entities_by_device_type(device_type: str) -> dict[int, set[str]]:
     """Return the additional entities."""
-    for device, additional_entities in entity_definition[ED_ADDITIONAL_ENTITIES_BY_DEVICE_TYPE].items():
+    for data in entity_definition[ED_ADDITIONAL_ENTITIES_BY_DEVICE_TYPE].items():
+        device: str = str(data[0])
+        additional_entities: dict[int, set[str]] = data[1]
         if device_type.startswith(device):
             return deepcopy(additional_entities)
     return {}
