@@ -3,6 +3,7 @@ Version 0.26.0 (2022-01-22)
 - Add additional params for HM-SEC-Win (DIRECTION, ERROR, WORKING, STATUS)
 - Add additional params for HM-SEC-Key (DIRECTION, ERROR)
 - Assign secondary channels for HM dimmers
+- Remove explicit wildcard in entity_definition
 
 Version 0.25.0 (2022-01-19)
 - Remove SpecialEvents
